--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
 	<title>Create User Account</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div class="createbox">
+  	<img src="pics/pic2.jpg" class="avatar">
+  	<h1>Create Account</h1>
+  	<form>
+  		<p>Username</p>
+  		<input type="text" name="" placeholder="Enter Username">
+  		<p>Password</p>
+  		<input type="password" name="" placeholder="Enter Password">
 
+  	</form>
+  </div>
 </body>
 </html>
