--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   	<form>
   		<p>Username</p>
   		<input type="text" name="" placeholder="Enter Username">
+  		<p>Email</p>
+  		<input type="text" name="" placeholder="Email">
   		<p>Password</p>
   		<input type="password" name="" placeholder="Enter Password">
-
+  		<p>Confirm Password</p>
+  		<input type="password" name="" placeholder="Enter Password">
+  		<input type="submit" name="" value="Sign Up">
   	</form>
   </div>
 </body>
