--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<img src="pics/pic_1.jpg" class="background">
   <div class="createbox">
-  	<img src="pics/pic2.jpg" class="avatar">
+  	<img src="pics/pic_2.jpg" class="avatar">
   	<h1>Create Account</h1>
   	<form>
   		<p>Username</p>
@@ -22,3 +23,4 @@
   </div>
 </body>
 </html>
+
