[feature #162267072] Delete READ.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<img src="pics/pic_1.jpg" class="background">
   <div class="createbox">
-  	<img src="pics/pic_2.jpg" class="avatar">
+  	<img src="pics/pic_2.png" class="avatar">
   	<h1>Create Account</h1>
   	<form>
   		<p>Username</p>
