[feature #162267072] Add more styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   		<p>Confirm Password</p>
   		<input type="password" name="" placeholder="Enter Password">
   		<input type="submit" name="" value="Sign Up">
+      <a href="login.html"><p class="IndexLink">Already have an account? Click Here.</p></a>
   	</form>
   </div>
 </body>
