--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   		<input type="password" name="" placeholder="Enter Password">
   		<input type="submit" name="" value="Sign In">
       <a href="#"><p class="Link">Forgot Password? Click Here.</p></a>
-      <a href="#"><p class="Link">Not Registered? Click Here.</p></a>
+      <a href="index.html"><p class="Link">Not Registered? Click Here.</p></a>
   	</form>
   </div>
 </body>
